# deeplearning

./: Cargo.toml
src/: functions.rs  lib.rs  main.rs  matrix_functions.rs  mnist.rs  rand_ext.rs  types.rs
src/impls/: ch03_forward_net.rs  ch04_gradient.rs  ch04_two_layer_net.rs  mod.rs
