[package]
authors = ["cohama <cohama@live.jp>"]
name = "deeplearning"
version = "0.1.0"

[dependencies]
approx = "0.1.1"
ndarray = { version = "0.9.1", features = ["blas"] }
ndarray-rand = "0.5.0"
blas-sys = { version = "0.6", default-features = false, features = ["openblas"] }
rand = "0.3.15"

[dependencies.rsplot]
path = "../rsplot"
